Add ratings paths and excludes to .codeclimate.yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,3 +3,11 @@ engines:
     enabled: true
   scss-lint:
     enabled: true
+
+exclude_paths:
+  - test/**/*
+
+ratings:
+  paths:
+    - "**.rb"
+
